--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,20 @@
         <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, odio, voluptatibus quas consequuntur asperiores, repudiandae quod earum distinctio ducimus praesentium eveniet eligendi quidem? Error ut reiciendis illo consequatur, dignissimos beatae.
             
         </p>
+    <div class = "content">
+        <h1>Task Smash 2.0</h1>
+        <table>
+            <tr>
+                <th>Task</th>
+                <th>Added</th>
+                <th>Actions</th>
+            </tr>
+            <tr>
+                <td>Content</td>
+                <td>Data</td>
+                <td>More</td>
+            </tr>
+        </table>
+    <div>
 </body> 
 </html>
